# trustifai

./: .env.example  .gitignore  README.md  config_file.yaml  pyproject.toml  requirements.txt  sample_notebook.ipynb  setup.py
.github/workflows/: python-publish.yml  run-tests.yml
benchmarks/: benchmark.py
benchmarks/amnesty_qa/: amnesty_benchmark.ipynb  benchmark_report.md  benchmark_results.csv
examples/: langchain_example.ipynb  llamaindex_example.ipynb
tests/: conftest.py  test_calculators.py  test_infra.py  test_metrics.py  test_services_extended.py  test_trustifai.py  test_visualizer.py
trustifai/: __init__.py  config.py  core.py  services.py  structures.py  visualizer.py
trustifai/metrics/: __init__.py  base.py  calculators.py  offline_metrics.py  online_metrics.py
