[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trustifai"
version = "0.1.0"
description = "Trustifai: A Comprehensive Framework for AI Trustworthiness"
readme = "README.md"
authors = [
    { name = "Aaryan Verma" }
]
requires-python = ">=3.10"
dependencies = [
    # Add your requirements here, or use the requirements.txt loader below
]
license = { file = "LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",]

[project.urls]
Homepage = "https://github.com/Aaryanverma/trustifai"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]